--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 MONGO_URI=mongodb+srv://clusterNODE:06546@clusternode.cckoud3.mongodb.net/
 JWT_SECRET=DEV@123
 PORT=7777
+CLIENT_ORIGIN=https://your-frontend.vercel.app
