--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "devtinder-backend",
+  "name": "BitDev-backend",
   "version": "1.0.0",
-  "description": "devTinde Backend using Nodejs",
+  "description": "BitDev Backend using Nodejs",
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon app.js"
   },
-  "author": "Akshad Jaiswal",
+  "author": "Niraj Prajapati",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
